2006-01-06  Simon Zheng <simon.zheng@sun.com>

	* junk-mail-settings.c:
	* mail-send-options.c:
	* proxy-login.c:
	* proxy.c:
	* proxy.h:
	* send-options.c:
	use libedataserver/e-account-list.h instead of e-util/e-account-list.h.
	use libedataserver/e-account.h instead of e-util/e-account.h.

2005-12-30  Andre Klapper <a9016009@gmx.de>

	* evolution/plugins/groupwise-features/properties.glade:
 	 Fixing several typos and harmonizing
	 capital/small letters. Partially fixes bug 306117.

2005-12-17  Tor Lillqvist  <tml@novell.com>

	* junk-settings.c
	* proxy-login.c
	* proxy.c
	* share-folder.c: Construct glade file name at run-time.

	* process-meeting.c (find_attendee): Use g_ascii_strcasecmp()
	instead of g_strcasecmp().

2005-12-12  Harish Krishnaswamy  <kharish@novell.com>

	* Makefile.am: Fix make-clean issues.

2005-12-05  Parthasarathi Susarla <sparthasarathi@novell.com>
	
	* proxy.c: initialize CamelException.

	Fixes bug #314576

2005-11-10  Harish Krishnaswamy  <kharish@novell.com>

	* mail-send-options.c: (org_gnome_compose_send_options):
	Function signature specifies a void return. So, do not 
	return NULL.
	
2005-10-20  Sankar P  <psankar@novell.com>

	* proxy-login.c (org_gnome_proxy_account_login) (proxy_login_get_cnc): 
	When the user forgets-password explicitly, the subsequent proxy-login requests 
	are made with a NULL password leading to unexpected behavior.
	Fixes #312467

	* proxy-login.c (proxy_login_update_tree) (proxy_login_get_cnc):
	Added the missing unrefs for the connection object.

2005-10-19  Shreyas Srinivasan  <sshreyas@novell.com>

	* proxy.c (org_gnome_proxy): Dont try to connect when the account is
	offline. Also connect to the server only when the proxy tab is clicked.
	* Fixes #314297, #314345

2005-10-14  Vivek Jain <jvivek@novell.com>
	
	* proxy.c :(proxy_get_cnc)
	"use_ssl" should be Null checked before comparing it with any value. 
	its NULL when evo is not compiled with ssl support and caused crash.
